# dbt-lineage-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs
src/graph/: builder.rs  diff.rs  filter.rs  impact.rs  mod.rs  types.rs
src/parser/: artifacts.rs  column_lineage.rs  columns.rs  discovery.rs  manifest.rs  mod.rs  project.rs  sql.rs  yaml_schema.rs
src/render/: ascii.rs  diff.rs  dot.rs  html.rs  impact.rs  json.rs  layout.rs  mermaid.rs  mod.rs  svg.rs
src/tui/: app.rs  event.rs  graph_widget.rs  mod.rs  run_status.rs  runner.rs  ui.rs
tests/: integration_test.rs  tui_test.rs
tests/fixtures/simple_project/: dbt_project.yml
tests/fixtures/simple_project/models/marts/: customers.sql  orders.sql  schema.yml
tests/fixtures/simple_project/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
tests/fixtures/simple_project/seeds/: countries.csv
tests/fixtures/simple_project/tests/: assert_orders_positive_amount.sql
