[package]
name = "dbt-lineage"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool for visualizing dbt model lineage"

[[bin]]
name = "dbt-lineage"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]

[dependencies]
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
colored = "2"
anyhow = "1"
thiserror = "2"
indexmap = "2"

# TUI dependencies (feature-gated)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3"
regex = "1"
serde_yaml = "0.9"
jugar-probar = { version = "1.0.2", default-features = false, features = ["tui"] }
